# django-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/cms/: admin.py  models.py  urls.py  views.py
apps/cms/migrations/: 0001_initial.py  0002_alter_menuitem_options_menuitem_new_tab.py
apps/cms/static/cms/css/: navigation.css
apps/cms/static/cms/js/: navigation.js
apps/cms/templates/cms/: page_detail.html
apps/cms/templates/cms/components/: main_nav.html
apps/cms/templatetags/: cms_tags.py
apps/core/: apps.py  urls.py  views.py
apps/core/templates/core/: index.html
templates/: base.html
{{ project_name }}/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
