[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Django project template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "django-health-check>=4.4.0",

    "whitenoise>=6.12.0",    
    "gunicorn>=23.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "ipython>=9.13.0",
]
